# SlidesToTextBook

./: .env.example  .gitignore  CHANGES_2026-02-02.md  ENVIRONMENT_SETUP.md  GEMINI_QUICK_START.md  ImplementationPlan.md  LICENSE  MANIFEST.in  QUICK_SUMMARY.md  README.md  SECURITY_VERIFICATION.md  WORK_COMPLETED_2026-02-02.md  absolute_resize.py  analyze_refs.py  apply_refinements.py  carry-on-prompt-jan-28.md  carry-on-prompt-jan-29.md  check_assets.py  check_example.py  cleanup_latex.py  debug_analysis.json  destroy_block.py  detected_people.json  emergency_structure_fix.py  environment.yml  expand_chapter_content.py  extract_assets.py  extract_people_from_chapter.py  extracted_assets.json  final_fix.py  final_manual_fix.py  fix_braces.py  fix_portrait_captions.py  force_complete_assets.py  force_inject_portraits_with_dates.py  generate_missing_figures.py  generate_missing_portraits.py  hardcoded_topic_analysis.json  hardcoded_topic_analysis_airquality.json  inject_goodfellow.py  (+39 more)
ComputationalPhysics/: progress.json
MachineLearning/: progress.json
src/slides_to_textbook/: __init__.py  cli.py
src/slides_to_textbook/modules/: DEPRECATED_image_generators.md  content_author.py  image_generators.py  latex_builder.py  (+7 more)
tests/: test_latexpipeline.py  test_portrait_preprocessor.py  test_portrait_preprocessor_additional.py  test_portrait_preprocessor_coverage.py
tests/unit/: test_content_author.py  test_image_generators.py  test_latex_builder.py  test_latex_components.py  test_pdf_analyzer.py  test_progress_tracker.py  test_topic_researcher.py  test_version.py
(+4 files in other folders)
